--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,17 @@ body {
     display: flex;
     justify-content: center;
 }
+
+.lost-language::before {
+    content: "💀";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: 0.85rem;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+}
